# dimple

./: .gitignore  .travis.yml  404.html  CMakeLists.txt  README.md  __init__.py  __main__.py  _config.yml  ccp4i-dimple.py  cell.py  coot.py  coots.py  dimple  dimple.bat  dimple.py  index.md  main.py  modified.py  mtz.py  my.css  pdb.py  setup.cfg  utils.py  workflow.py
_includes/: my.css
_layouts/: default.html
c4/: blobs.h  cell.py  coot.py  find-blobs.cc  mtz.py  pdb.py  utils.py  workflow.py
contaminants/: __init__.py  data.json  data.py  prepare.py  tree.html
cxx/: find-blobs.cc
dispatchers/: cad.py  freerflag.py  mtzdump.py  pdbset.py  pointless.py  refmac5.py  reindex.py  truncate.py  unique.py
test/: test.sh
tests/: check_same_free.py  comparemtz.py  test.bat  test.sh  thaumatin.mtz  utest.py
